--- a/config/unbound.conf
+++ b/config/unbound.conf
@@ -22,7 +22,7 @@ server:
     cache-max-ttl: 3600
 
     # Таймауты
-    timeout: 3000               # 3 с на upstream-ответ
+    #timeout: 3000               # 3 с на upstream-ответ
     target-fetch-policy: "2 1 0"
 
 # DoT-апстримы
