--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
     volumes:
       - ./config/godns.yaml:/etc/godns.yaml:ro
       - /var/log/godns:/var/log/godns
+      - /etc/godns:/etc/godns
     cap_add:
       - NET_BIND_SERVICE
-#      - NET_ADMIN
     restart: unless-stopped
     environment:
       TZ: "Europe/Minsk"
