--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - ./config/godns.yaml:/etc/godns.yaml:ro
       - /var/log/godns:/var/log/godns
       - /etc/godns:/etc/godns
+      - ad-data:/var/lib/godns
     cap_add:
       - NET_BIND_SERVICE
     restart: unless-stopped
