--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,13 @@ services:
       - /etc/godns:/etc/godns
     cap_add:
       - NET_BIND_SERVICE
+      - NET_ADMIN
+      - NET_RAW
+      - SYS_ADMIN
     restart: unless-stopped
     environment:
       TZ: "Europe/Minsk"
     dns:
       - 1.1.1.1
       - 8.8.8.8
+    network_mode: host
