--- a/config/godns.yaml
+++ b/config/godns.yaml
@@ -4,13 +4,13 @@ up2:          "https://dns.google/dns-query"
 up3:          "https://dns.quad9.net/dns-query"
 cache_size:   10000     # записей
 timeout:      2s
-log_level:    debug
+log_level:    info
 vrrp:
   enable:     yes
   iface:      enp3s0
   vrid:       10
   vip:        192.168.1.9
-  prior:      50
+  prior:      200
   adver_int:  1
 adblock:
   enable:     yes
